Initial add of fastapi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ readme = "README.md"
 packages = [{include = "little_observability"}]
 
 [tool.poetry.dependencies]
-python = "y"
+python = "^3.10"
+fastapi = "^0.88.0"
+uvicorn = {extras = ["standard"], version = "^0.20.0"}
+python-dotenv = "^0.21.0"
 
 
 [build-system]
